# QTProject

./: CMakeLists.txt  main.cpp
forms/: mainwindow.ui
include/: mainwindow.h  ui_mainwindow.h
src/: mainwindow.cpp
